samples/_failures_safe/1761208514_67f181_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0f7fc081.c: In function ‘main’:
./samples/SAFE/__tmp_0f7fc081.c:121:12: error: missing terminating " character
  121 |     printf("1. Add
      |            ^~~~~~~
./samples/SAFE/__tmp_0f7fc081.c:121:5: error: expected expression at end of input
  121 |     printf("1. Add
      |     ^~~~~~
./samples/SAFE/__tmp_0f7fc081.c:121:5: error: expected declaration or statement at end of input
